--- a/kartu.html
+++ b/kartu.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="theme-color" content="#ff0000">
+    <meta name="theme-color" content="Red">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Detail Kartu Debit</title>
     <style>
